--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -28,7 +28,7 @@
           <div class="card">
             <div class="card-image">
               <img src="../images/tile-game.jpg">
-              <span class="card-title black-text">Tile Game</span>
+              <span class="card-title white black-text">Tile Game</span>
             </div>
             <div class="card-content">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
