slight style changes

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,8 +1,10 @@
 
 <% include partials/head.ejs %>
 <body>
+<div class="container">
   <h1>Andrew Dallas</h1>
   <h3>My Projects</h3>
+
   <div class="row">
         <div class="col s8 m4">
           <div class="card">
@@ -43,7 +45,7 @@
           </div>
         </div>
       </div>
-
+    </div>
 </body>
 <% include partials/footer.ejs %>
 </html>
