--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <% include partials/header.ejs %>
     <div class="container">
       <nav>
-        <div class="nav-bar">
-          <a href="#"  class="brand-logo"> AD</a>
+        <div class="nav-wrapper">
+          <a href="#"  class="brand-logo left"> AD</a>
           <ul class="right">
 
             <li><a href="./contact">Contact</a></li>
