--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -3,6 +3,17 @@
 <body>
 <div class="container">
   <h1>Andrew Dallas</h1>
+    <nav>
+        <div class="nav-wrapper">
+          <a href="/"  class="brand-logo left"> AD</a>
+          <ul class="right">
+
+            <li><a href="./contact">Contact</a></li>
+            <li><a href="./about">About</a></li>
+            <li><a href="/">Home</a></li>
+          </ul>
+        </div>
+      </nav>
   <h3>My Projects</h3>
 
   <div class="row">
