Added google analytics and some styling changes

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,6 +10,18 @@ a {
   padding-right: 50px;
 }
 
-.row {
-  background-color: black;
+#tile {
+  height: 139px;
+}
+
+.brand-logo {
+  margin-left: 20px;
+}
+
+.card-image {
+  height: 250px;
+}
+
+.card-content {
+  height: 200px;
 }
