--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
   <div class="container">
   <h1>Andrew Dallas</h1>
       <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper black">
           <a href="/"  class="brand-logo left"> AD</a>
           <ul class="right">
 
