--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -4,12 +4,11 @@
 <div class="container">
   <h1>Andrew Dallas</h1>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper black">
           <a href="/"  class="brand-logo left"> AD</a>
           <ul class="right">
 
             <li><a href="./contact">Contact</a></li>
-            <li><a href="./about">About</a></li>
             <li><a href="/">Home</a></li>
           </ul>
         </div>
@@ -17,37 +16,38 @@
   <h3>My Projects</h3>
 
   <div class="row">
-        <div class="col s8 m4">
-          <div class="card">
+        <div class="col s8 m4 l6">
+          <div class="card" id="card1">
             <div class="card-image">
               <img src="../images/punch-in.jpg">
               <span class="card-title">Punch-In</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Laboriosam ipsum labore veniam cupiditate recusandae qui harum
-                minus voluptatibus, voluptate, neque repudiandae modi explicabo
-                tempore at iure error, minima iusto fugit.
+              <p>Punch-In is productivity designed to be a simple way for
+                  users to track tasks and time. I found that if
+                  I was able to make a task tracking application with
+                  nothing else to distract from work then more could be
+                  accomplished.
               </p>
             </div>
             <div class="card-action">
               <a href="http://punch-in.bitballoon.com">Check it out!</a>
             </div>
           </div>
-        </div>
+
       </div>
-  <div class="row">
-        <div class="col s8 m4">
-          <div class="card">
+
+        <div class="col s8 m4 l6">
+          <div class="card" id="card2">
             <div class="card-image">
-              <img src="../images/tile-game.jpg">
+              <img src="../images/tile-game.jpg" id="tile">
               <span class="card-title white black-text">Tile Game</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Laboriosam ipsum labore veniam cupiditate recusandae qui harum
-                minus voluptatibus, voluptate, neque repudiandae modi explicabo
-                tempore at iure error, minima iusto fugit.
+              <p>Tile game is a classic puzzle game that I have fond memories
+                  of from childhood. It can certainly be a frustrating game
+                  at that. This was the first project that I really dug into
+                  and tested my JavaScript abilities.
               </p>
             </div>
             <div class="card-action">
