--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,11 +4,9 @@
   <div class="container">
     <h1>Andrew Dallas</h1>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper black">
           <a href="/"  class="brand-logo left"> AD</a>
           <ul class="right">
-
-            <li><a href="./about">About</a></li>
             <li><a href="./projects">Projects</a></li>
             <li><a href="/">Home</a></li>
           </ul>
