added devicons and some styling changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,4 +18,12 @@ a {
   height: 250px; }
 
 .card-content {
-  height: 200px; }
+  height: 250px; }
+
+.devicon {
+  font-size: 75px;
+  display: inline;
+  margin: 25px; }
+
+#about {
+  font-size: 18px; }
