--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -23,5 +23,15 @@ a {
 }
 
 .card-content {
-  height: 200px;
+  height: 250px;
+}
+
+.devicon {
+ font-size: 75px;
+ display: inline;
+ margin: 25px;
+}
+
+#about {
+  font-size: 18px;
 }
