--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,11 +14,28 @@
         </div>
       </nav>
   <h3>About Me</h3>
-  <p>I am a dedicated and hard working problem solver. I strive to find efficient
-    and effective solutions to each challenge I am faced with. I believe this is
-    the reason that I love web development. The satisfaction of reaching a
-    project goal or solving a bug and seeing my code work is what drives me.
+  <p id="about">I am a dedicated and hard working problem solver. I strive to
+    find efficient and effective solutions to each challenge I am faced with.
+    I believe this is the reason that I love web development. The satisfaction
+    of reaching a project goal or solving a bug and seeing my code
+    work is what drives me.
   </p>
+  <h3>My Skills</h3>
+  <h3 class="devicon"><i class="devicon-javascript-plain"></i></h3>
+  <h3 class="devicon"><i class="devicon-html5-plain-wordmark"></i></h3>
+  <h3 class="devicon"><i class="devicon-css3-plain-wordmark"></i></h3>
+  <h3 class="devicon"><i class="devicon-github-plain-wordmark colored"></i></h3>
+  <h3 class="devicon"><i class="devicon-nodejs-plain-wordmark"></i></h3>
+  <h3 class="devicon"><i class="devicon-react-original-wordmark"></i></i></h3>
+  <h3 class="devicon"><i class="devicon-heroku-line-wordmark"></i></h3>
+  <h3 class="devicon"><i class="devicon-postgresql-plain-wordmark"></i></h3>
+  <h3 class="devicon"><i class="devicon-git-plain-wordmark"></i></i></h3>
+  <h3 class="devicon"><i class="devicon-bootstrap-plain-wordmark"></i></i></h3>
+  <h3 class="devicon"></i><i class="devicon-jquery-plain-wordmark"></i></h3>
+  <h3 class="devicon"></i><i class="devicon-rails-plain-wordmark"></i></h3>
+  <h3 class="devicon"></i><i class="devicon-ruby-plain-wordmark"></i></h3>
+  <h3 class="devicon"></i><i class="devicon-trello-plain-wordmark"></i></h3>
+  <h3 class="devicon"><i class="devicon-sass-original"></i></i></h3>
 </div>
 </body>
 <% include partials/footer.ejs %>
