--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -24,14 +24,14 @@
           </div>
           <div>
             <label>Subject:</label>
-            <input type="text" name="subject" required/>
+            <input type="text" name="subject" placeHolder="Please include your name" required/>
           </div>
           <div>
             <label>Message:</label>
             <textarea name="message" required></textarea>
           </div>
           <div>
-            <input type="submit" value="Register"/>
+            <input type="submit" value="Send Message"/>
           </div>
         </form>
       </div>
