--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -16,11 +16,11 @@
   <h3>My Projects</h3>
 
   <div class="row">
-        <div class="col s8 m4 l6">
-          <div class="card" id="card1">
+        <div class="col s12 m6 l6">
+          <div class="card center" id="card1">
             <div class="card-image">
               <img src="../images/punch-in.jpg">
-              <span class="card-title">Punch-In</span>
+              <span class="card-title white black-text">Punch-In</span>
             </div>
             <div class="card-content">
               <p>Punch-In is productivity designed to be a simple way for
@@ -37,7 +37,7 @@
 
       </div>
 
-        <div class="col s8 m4 l6">
+        <div class="col s12 m6 l6">
           <div class="card" id="card2">
             <div class="card-image">
               <img src="../images/tile-game.jpg" id="tile">
