--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <% include partials/head.ejs %>
 <body>
-  <div class="container">
-  <h1>Andrew Dallas</h1>
+
+    <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper black">
           <a href="/"  class="brand-logo left"> AD</a>
@@ -13,6 +13,10 @@
           </ul>
         </div>
       </nav>
+    </div>
+      <div class="container">
+      <h1 class="name">Andrew Dallas</h1>
+      <hr />
   <h3>About Me</h3>
   <p id="about">I am a dedicated and hard working problem solver. I strive to
     find efficient and effective solutions to each challenge I am faced with.
