--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,8 +10,8 @@ a {
   padding-right: 50px;
 }
 
-#tile {
-  height: 139px;
+img {
+  height: 250px;
 }
 
 .brand-logo {
@@ -35,3 +35,9 @@ a {
 #about {
   font-size: 18px;
 }
+
+.card-title {
+  padding: 2px;
+}
+
+
